k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eszett-log
  namespace: eszett-log
spec:
  selector:
    app: eszett-log
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
