k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eszett-log
  namespace: eszett-log
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: eszett-log.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eszett-log
                port:
                  number: 80
